@@ -294,11 +294,6 @@ char		outfile[MAXPATHLEN], *cfile;
 				} break; // not really needed
 		}
 
-		if ( nffile_r->block_header->id == Large_BLOCK_Type ) {
-			// skip
-			continue;
-		}
-
 		if ( nffile_r->block_header->id != DATA_BLOCK_TYPE_2 ) {
 			fprintf(stderr, "Can't process block type %u. Skip block.\n", nffile_r->block_header->id);
 			continue;
