@@ -161,11 +161,6 @@ int 		i, j, done, ret ;
 				} break; // not really needed
 		}
 
-		if ( nffile->block_header->id == Large_BLOCK_Type ) {
-			// skip
-			continue;
-		}
-
 		if ( nffile->block_header->id != DATA_BLOCK_TYPE_2 ) {
 			LogError("Can't process block type %u. Skip block.\n", nffile->block_header->id);
 			continue;
