@@ -1,3 +1,6 @@
+2020-02-09
+- Cleanup unused nffile records. Add nffileV2.h
+
 2020-02-02
 - Fix various compiler warnings and automake issues
 
